--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
         <!--
         Details about your application, like where is the main()-method
         -->
-        <application.main>Main</application.main>
-        <application.filename>mappe-prosjekt-paths-mappe-4</application.filename>
+        <application.main>gruppe.fire.Main</application.main>
+        <application.filename>gruppe.fire.Main</application.filename>
     </properties>
 
     <build>
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>24.0.1</version>
             <scope>compile</scope>
         </dependency>
 
