Updated settings + Refactoring

--- a/Data/settings.cfg
+++ b/Data/settings.cfg
@@ -1,4 +1,4 @@
-fullscreen = true
-background = true
-music = 0.5
-fx = 0.5
+fullscreen=true
+background=true
+music=0.29629632657167193
+fx=0.29629632657167193
